# autoware_perception

autoware_msgs/: CMakeLists.txt
autoware_msgs/msg/: State.msg
dynamic_object_visualization/: CMakeLists.txt
dynamic_object_visualization/include/dynamic_object_visualization/: dynamic_object_visualizer.h
dynamic_object_visualization/launch/: dynamic_object_visualizer.launch
dynamic_object_visualization/src/: dynamic_object_visualizer.cpp
euclidean_cluster/: CMakeLists.txt  package.xml
euclidean_cluster/launch/: euclidean_cluster.launch
euclidean_cluster/src/: euclidean_cluster_nodelet.cpp
multi_object_tracker/: CMakeLists.txt
multi_object_tracker/include/multi_object_tracker/: node.hpp
multi_object_tracker/launch/: multi_object_tracker.launch
multi_object_tracker/src/: node.cpp
multi_object_tracker/src/data_association/: data_association.cpp
multi_object_tracker/src/tracker/model/: vehicle_tracker.cpp
perception_launch/: CMakeLists.txt
perception_launch/launch/: perception.launch  perception_no_vscan.launch
roi_cluster_fusion/: CMakeLists.txt
roi_cluster_fusion/include/roi_cluster_fusion/: roi_cluster_fusion_nodelet.h
roi_cluster_fusion/launch/: roi_cluster_fusion.launch
roi_cluster_fusion/src/: roi_cluster_fusion_nodelet.cpp
shape_estimation/: CMakeLists.txt
shape_estimation/src/corrector/: bus_corrector.cpp  car_corrector.cpp  truck_corrector.cpp
shape_estimation/src/map_corrector/: vector_map.cpp
shape_estimation/src/model/: bounding_box.cpp  convex_hull.cpp
vision_darknet_detect/src/: vision_darknet_detect.cpp
(+6 files in other folders)
