<?xml version="1.0"?>
<package format="2">
  <name>euclidean_cluster</name>
  <version>0.0.0</version>
  <description>The euclidean_cluster package</description>

  <maintainer email="yukihiro@todo.todo">yukihiro</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nodelet</depend>
  <!-- <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_sensor_msgs</depend>
    <depend>visualization_msgs</depend> -->
  <depend>pcl_conversions</depend>
  <depend>autoware_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
